# aoc-2020

./: .gitignore  README.md  aoc-2020.cabal
src/: AOC001.hs  AOC002.hs  AOC003.hs  AOC004.hs  AOC005.hs  AOC006.hs  AOC007.hs  AOC008.hs  AOC009.hs  AOC010.hs  AOC011.hs  Console.hs  Generator.hs  Main.hs  Problem.hs  Solver.hs
